--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_checkhead_all.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_checkhead_all.form
@@ -1115,7 +1115,7 @@
   <form:datasources>
     <form:datasource xsi:type="form:Inputs"/>
     <form:datasource xsi:type="form:TreeDataSource" id="treeshipper" name="树型数据源" impl="com.unlcn.ils.tps.services.ShipperService" type="custom"/>
-    <form:datasource xsi:type="form:LogicDataSource" id="items" name="项目" logic="rule:com.unlcn.ils.tps.s_items" sn="s_items"/>
+    <form:datasource xsi:type="form:LogicDataSource" id="items" name="项目" logic="rule:com.unlcn.ils.tps.s_getOperateItems" sn="s_getOperateItems"/>
     <form:datasource xsi:type="form:LogicDataSource" id="types" name="类型" logic="rule:com.unlcn.ils.tps.s_types" sn="s_types"/>
     <form:datasource xsi:type="form:LogicDataSource" id="itemsid" name="项目编号" logic="rule:com.unlcn.ils.tps.s_itemsid" sn="s_itemsid"/>
     <form:datasource xsi:type="form:PagingDataSource" id="custom_checkhead" name="列表型数据源" logic="com.unlcn.ils.tps.services.CheckHeadService" pageSize="10" type="custom"/>
